# writersproof-cli

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE  PRIVACY.md  README.md  SECURITY.md  SPEC.md  appcast.xml  audit-followups.md  audit-progress.md  cli_windows_spec.md  cliff.toml  generate_c2pa_sample.sh  todo.md  todo.md.bak.2026-05-12  todo.md.new
apps/cpoe_cli/: Cargo.toml  README.md  install.sh
apps/cpoe_cli/.github/workflows/: release.yml  update-package-managers.yml
apps/cpoe_cli/packaging/linux/: README-LINUX-PACKAGING.md
apps/cpoe_cli/src/: cli.rs  cmd_attest.rs  cmd_badge.rs  cmd_beacon.rs  cmd_commit.rs  cmd_config.rs  cmd_credential.rs  cmd_daemon.rs  cmd_fingerprint.rs  cmd_forensics.rs  cmd_link.rs  cmd_log.rs  cmd_report.rs  cmd_snapshot.rs  cmd_status.rs  cmd_verify.rs  main.rs  output.rs  smart_defaults.rs  spec.rs  util.rs
apps/cpoe_cli/src/cmd_export/: mod.rs  output.rs  packet.rs
apps/cpoe_cli/src/cmd_track/: checkpoint.rs  filesystem.rs  mod.rs
apps/cpoe_cli/src/native_messaging_host/: handlers.rs  jitter.rs  mod.rs  protocol.rs  session_index.rs  tests.rs  types.rs
apps/cpoe_cli/tests/: cli_e2e.rs  test_application.rs  test_commit_verify.rs  test_export.rs
apps/cpoe_cli/tests/common/: mod.rs
apps/writersproof_gui/: Cargo.toml
apps/writersproof_gui/src/: ipc.rs  main.rs
crates/authorproof-protocol/: CHANGELOG.md  Cargo.toml  README.md
crates/authorproof-protocol/examples/: embed_check.rs  mock_c2pa.rs  simple_attestation.rs
crates/authorproof-protocol/src/: compact_ref.rs  crypto.rs  evidence.rs  identity.rs  lib.rs  serde_helpers.rs  wasm.rs
crates/authorproof-protocol/src/c2pa/: builder.rs  cert.rs  embed.rs  jumbf.rs  mod.rs  standalone.rs  tests.rs  text_attest.rs  text_embed.rs  timestamp.rs  trust.rs  types.rs  validation.rs
crates/authorproof-protocol/src/codec/: cbor.rs  mod.rs
crates/authorproof-protocol/src/forensics/: classifier.rs  cognitive.rs  engine.rs  mod.rs  transcription.rs  word_frequency.rs
crates/authorproof-protocol/src/rfc/: checkpoint.rs  fixed_point.rs  jitter_binding.rs  mod.rs  serde_helpers.rs  vdf.rs
crates/authorproof-protocol/src/war/: ear.rs  encoding.rs  types.rs
crates/authorproof-protocol/tests/: cpoe_tests.rs
crates/badge-fingerprint/: .gitignore  Cargo.toml
crates/badge-fingerprint/examples/: dump_badge.rs  dump_fp.rs  gallery.rs
crates/badge-fingerprint/src/: badge.rs  features.rs  fingerprint.rs  fixed.rs  lib.rs  short_id.rs  wasm.rs
crates/badge-fingerprint/tests/: integration.rs
crates/cpoe/: Cargo.toml
crates/cpoe-jitter/: Cargo.toml  README.md
crates/cpoe-jitter/examples/: basic_session.rs  verify_evidence.rs
crates/cpoe-jitter/src/: cognitive.rs  evidence.rs  lib.rs  model.rs  phys.rs  pure.rs
crates/cpoe-jitter/tests/: e2e.rs
crates/cpoe/benches/: keystroke_bench.rs  store_bench.rs
crates/cpoe/examples/: transcription_check.rs
crates/cpoe/examples/transcription_check_samples/: composition.json  linear_typing.json  run_all.sh  with_focus_switches.json
crates/cpoe/proptest-regressions/mmr/: mmr_tests.txt
crates/cpoe/src/: collaboration.rs  continuation.rs  crypto.rs  error.rs  lib.rs  serde_utils.rs
crates/cpoe/src/analysis/: active_probes.rs  behavioral_fingerprint.rs  content_detector.rs  error_topology.rs  histogram.rs  hurst.rs  iki_compression.rs  labyrinth.rs  language_model.rs  lyapunov.rs  mod.rs  perplexity.rs  pink_noise.rs  snr.rs  spatial.rs  stats.rs
crates/cpoe/src/anchors/: mod.rs  ots.rs  rfc3161.rs  tests.rs
crates/cpoe/src/baseline/: digest.rs
crates/cpoe/src/checkpoint/: chain.rs  chain_verification.rs  mmr.rs  mod.rs  tests.rs  timing.rs
crates/cpoe/src/config/: loading.rs  mod.rs  tests.rs  types.rs
crates/cpoe/src/content/: mmr.rs  mod.rs  segmentation.rs
crates/cpoe/src/cpoe_jitter_bridge/: helpers.rs  session.rs  zone_engine.rs
crates/cpoe/src/credentials/: mod.rs
crates/cpoe/src/crypto/: anti_analysis.rs  lamport.rs  mem.rs  obfuscated.rs
crates/cpoe/src/declaration/: tests.rs  verification.rs
crates/cpoe/src/evidence/: hw_cosign.rs  mod.rs  packet.rs  provenance.rs  rfc_conversions.rs  tests.rs  types.rs  wire_conversion.rs
crates/cpoe/src/ffi/: archive.rs  attestation.rs  badge_render.rs  beacon.rs  chain.rs  collaboration_ffi.rs  content_witnessing.rs  conv.rs  credentials.rs  dictation_analytics.rs  did_webvh_ffi.rs  ephemeral.rs  evidence_checkpoint.rs  evidence_derivative.rs  evidence_export.rs  fingerprint.rs  forensic_fields.rs  forensics.rs  forensics_detail.rs  helpers.rs  mod.rs  openbadge_export.rs  report.rs  report_dimensions.rs  report_types.rs  sentinel.rs  sentinel_config.rs  sentinel_es.rs  sentinel_inject.rs  sentinel_witnessing.rs  snapshot.rs  system.rs  text_fragment.rs  types.rs  user_apps.rs  vc_export.rs  verify_detail.rs  writersproof_ffi.rs
crates/cpoe/src/fingerprint/: activity.rs  activity_analysis.rs  activity_collection.rs  author.rs  capture.rs  capture_windows.rs  comparison.rs  consent.rs  error.rs  global.rs  manager.rs  maturity.rs  mod.rs  storage.rs  tests.rs  voice.rs
crates/cpoe/src/forensics/: advanced_metrics.rs  analysis.rs  assessment.rs  cadence.rs  cognitive_accumulator.rs  cognitive_load.rs  composition_mode.rs  constants.rs  cross_modal.rs  cursor_attention.rs  dictation.rs  engine.rs  error_ecology.rs  event_validation.rs  forgery_cost.rs  likelihood_model.rs  mod.rs  provenance_metrics.rs  report.rs  revision_topology.rs  scoring.rs  tests.rs  topology.rs  types.rs  velocity.rs  writing_mode.rs
crates/cpoe/src/identity/: apple.rs  bridge.rs  did_document.rs  did_webvh.rs  (+7 more)
crates/cpoe/tests/: c2pa_conformance.rs  credential_package_e2e.rs  crossley_calibration.rs  demo_flow_integration.rs  entropy_checkpoint_bench.rs  integration_tests.rs  notarize_e2e.rs  sentinel_integration.rs  standards_conformance.rs  v2_classifier_calibration.rs
crates/posme/: Cargo.toml
crates/posme/src/: block.rs  error.rs  hash.rs  init.rs  lib.rs  merkle.rs  params.rs  proof.rs  prover.rs  seed.rs  step.rs  verifier.rs
(+1332 files in other folders)
