[workspace]
resolver = "2"
members = [
    "crates/cpoe-jitter",
    "crates/authorproof-protocol",
    "crates/badge-fingerprint",
    "crates/posme",
    "crates/cpoe",
    "apps/cpoe_cli",
    "apps/writersproof_gui",
]

[workspace.package]
version = "1.0.5"
authors = ["David Condrey <david@writerslogic.com>"]
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/writerslogic/writersproof-cli"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = true

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
hmac = "0.12.1"
ed25519-dalek = "2.1.1"
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
thiserror = "2.0.11"
hex = "0.4.3"
rand = "0.9.0"
zeroize = { version = "1.8.1", features = ["derive"] }
log = "0.4"
base64 = "0.22.1"
ciborium = "0.2"
coset = "0.3"
uniffi = "0.28"
