[package]
name = "cpoe_cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
repository.workspace = true
description = "Command-line interface for cryptographic authorship witnessing"
publish = false
readme = "README.md"
keywords = ["cli", "authorship", "witnessing", "attestation", "proof-of-process"]
categories = ["command-line-utilities"]
rust-version = "1.75.0"
homepage = "https://github.com/writerslogic/cpoe"
documentation = "https://github.com/writerslogic/cpoe/tree/main/apps/cpoe_cli"
exclude = ["tests/"]

[[bin]]
name = "cpoe"
path = "src/main.rs"

[[bin]]
name = "writerslogic-native-messaging-host"
path = "src/native_messaging_host/mod.rs"

[features]
default = ["cpoe_jitter"]
cpoe_jitter = ["cpoe/cpoe_jitter"]

[dependencies]
cpoe = { path = "../../crates/cpoe", features = ["ffi"], package = "cpoe" }
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
anyhow = "1.0"
bs58 = "0.5"
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
ed25519-dalek = "2.1"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
getrandom = "0.2"
hostname = "0.4"
notify = "6.1"
glob = "0.3"
tempfile = "3.10"
url = "2.5"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
ctrlc = "3.4"
dialoguer = "0.11"
fs2 = "0.4"
shell-words = "1.1"
p256 = { version = "0.13", features = ["ecdh"] }
base64 = "0.22"
