[package]
name = "authorproof-protocol"
version = "0.3.0"
authors = ["David Condrey <david@writerslogic.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/writerslogic/cpoe"
description = "AuthorProof Record protocol and wire types"
readme = "README.md"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
serde_bytes = "0.11"
sha2 = "0.10.8"
chrono = { version = "0.4.39", features = ["serde"] }
hex = "0.4.3"
base64 = "0.22.1"
ciborium = "0.2"
coset = "0.4"
anyhow = "1.0.95"
thiserror = "2.0.11"
ed25519-dalek = { version = "2.1.1", features = ["zeroize"] }
zeroize = { version = "1.8.1", features = ["derive"] }
rand = "0.8"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
ratchet = { version = "0.1", optional = true }
signature = "2.2"
spki = "0.7"
x509-cert = "0.2"
der = "0.7"
const-oid = "0.9"
urlencoding = "2.1"
log = "0.4"
subtle = "2.6"
hmac = "0.12.1"
cpoe-jitter = { path = "../cpoe-jitter" }
posme = { path = "../posme", optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
wasm = ["dep:ratchet"]
posme = ["dep:posme"]
