[package]
name = "cpoe-jitter"
version = "0.2.1"
edition = "2021"
rust-version = "1.70.0"
authors = ["David Condrey <david@writerslogic.com>"]
license = "Apache-2.0"
description = "Timing jitter entropy primitive for Cryptographic Proof of Effort (CPoE) human authorship attestation"
repository = "https://github.com/LF-Decentralized-Trust-labs/proof-of-effort"
keywords = ["cryptography", "authentication", "timing", "entropy", "authorship"]
categories = ["cryptography", "authentication"]
readme = "README.md"
homepage = "https://lf-decentralized-trust-labs.github.io/proof-of-effort/"
publish = false
documentation = "https://docs.rs/cpoe-jitter"
exclude = ["fuzz/", "benches/"]

[dependencies]
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }
thiserror = { version = "2.0", optional = true }
getrandom = { version = "0.3", optional = true }
zeroize = { version = "1.8", default-features = false, features = ["derive", "alloc"] }
subtle = { version = "2.6", default-features = false }
rand = { version = "0.8", optional = true }
hkdf = { version = "0.12.4", default-features = false }
libm = "0.2"

[dev-dependencies]
rand = "0.8"
criterion = "0.8"
serde_json = "1.0"

[[bench]]
name = "benchmarks"
harness = false

[features]
default = ["std"]
# Enable standard library (required for Session, timing, serde_json)
std = ["dep:serde_json", "dep:thiserror", "dep:getrandom", "sha2/std", "hmac/std", "serde/std", "zeroize/std", "hkdf/std"]
# Enable hardware entropy collection (TSC, etc.) - requires std for timing fallback
hardware = ["std"]
# Enable random secret generation - requires std
rand = ["dep:rand", "std"]
