[package]
name = "cpoe"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license = "SSPL-1.0"
repository.workspace = true
description = "High-integrity document witnessing daemon (AuthorProof)"
readme = "README.md"
keywords = ["cryptography", "authorship", "witnessing", "attestation", "proof-of-process"]
categories = ["cryptography", "authentication"]
rust-version = "1.75.0"

homepage = "https://github.com/writerslogic/cpoe"
documentation = "https://docs.rs/cpoe"
exclude = ["tests/", "fuzz/", "benches/"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("cargo-clippy"))'] }

[lib]
name = "cpoe_engine"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["ffi"]

[dependencies]
# Cryptography
sha2 = { version = "0.10.8", features = ["oid"] }
hmac = "0.12.1"
argon2 = "0.5"
ed25519-dalek = { version = "2.1.1", features = ["zeroize"] }
rand = "0.9.0"
bip39 = "2.1.0"
zeroize = { version = "1.8.1", features = ["derive"] }
subtle = "2.6"

# Storage
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Snapshot version history
similar = "3.1.0"
zstd = "0.13"
flate2 = "1"

# Serialization
serde = { version = "1.0.217", features = ["derive", "rc"] }
serde_bytes = "0.11"
serde_json = "1.0.135"
serde_jcs = "0.2"
scopeguard = "1"
async-trait = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query", "blocking"] }
rustls = "0.23"
rustls-pki-types = "1"
webpki-roots = "0.26"
x509-cert = { version = "0.2", features = ["builder"] }
url = "2"
log = "0.4"
getrandom = "0.2"
ripemd = "0.1"
der = "0.7"

# Math & Analysis
aho-corasick = "1"
statrs = "0.18.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] } 
lazy_static = "1.5.0"

# CBOR encoding (RFC 8949 compliance for Proof-of-Process packets)
ciborium = "0.2"
coset = "0.4"  # COSE signatures for hardware attestation

# Async & System
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7"
sysinfo = { version = "0.33.1", default-features = false, features = ["apple-app-store", "system"] }
libc = "0.2"
anyhow = "1.0.95"
thiserror = "2.0.11"
chrono = { version = "0.4.39", features = ["serde"] }
raw-cpuid = "11.2.0"
base64 = "0.22.1"
uuid = { version = "1.12.1", features = ["v4", "serde"] }
hex = "0.4.3"
bs58 = "0.5"
urlencoding = "2.1"
dirs = "5.0.1"
notify = "6.1.1"
crc32fast = "1.4.2"
hkdf = "0.12.4"
hostname = "0.4.0"
rsa = "0.9.6"


# Roughtime (Rougenough crates)
roughenough-protocol = "2.0.0"
roughenough-common = "2.0.0"

# Integration
keyring = "2.3.3"
glob = "0.3.2"
toml = "0.8.19"
blake3 = "1.8.3"
chacha20poly1305 = "0.10.1"
aes-gcm = { version = "0.10", features = ["zeroize"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }

# Thread-safe concurrent collections
dashmap = "6.0"

# FFI bindings for Swift/Kotlin (via UniFFI)
uniffi = { version = "0.29", optional = true }

# CPoE Jitter - hardware entropy for proof-of-process
cpoe-jitter = { path = "../cpoe-jitter", optional = true }
typeshare = "1.0.5"
unicode-normalization = "0.1"

# AuthorProof Protocol
authorproof-protocol = { path = "../authorproof-protocol" }

# PoSME - Proof of Sequential Memory Execution
posme = { path = "../posme", features = ["prover"], optional = true }

# did:webvh identity (requires Rust >= 1.90.0 when enabled)
didwebvh-rs = { version = "0.4", default-features = false, features = ["network"], optional = true }
affinidi-data-integrity = { version = "0.5", optional = true }
affinidi-secrets-resolver = { version = "0.5", optional = true }

tempfile = "3"

# PDF report generation
printpdf = "0.7"
qrcode = "0.14"

# Unix Specific
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process", "socket", "user", "fs"] }

# Windows Specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_System_TpmBaseServices",
    "Win32_Storage_FileSystem",
] }

# macOS Specific
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.0"
core-foundation-sys = "0.8.6"
objc = "0.2.7"
security-framework = { version = "3.0.0", features = ["OSX_10_12"] }
security-framework-sys = "2.9.1"

[target.'cfg(target_os = "linux")'.dependencies]
tss-esapi = "7.6"
evdev = "0.12"
input-linux = "0.6"
libc = "0.2"
x11rb = { version = "0.13", features = ["allow-unsafe-code"], optional = true }
wayland-client = { version = "0.31", optional = true }
wayland-protocols-wlr = { version = "0.3", optional = true, features = ["client"] }
zbus = { version = "4", optional = true, default-features = false, features = ["tokio"] }

[features]
default = ["cpoe_jitter"]
cpoe_jitter = ["dep:cpoe-jitter"]
x11 = ["x11rb"]  # Enable X11 focus detection on Linux
wayland = ["dep:wayland-client", "dep:wayland-protocols-wlr"]  # Wayland focus detection on Linux
dbus = ["dep:zbus"]  # DBus focus detection on Linux (GNOME/KDE)
ffi = ["dep:uniffi", "uniffi/cli"]  # UniFFI bindings for Swift (macOS GUI)
test-utils = []  # Expose internal helpers for integration tests
did-webvh = ["dep:didwebvh-rs", "dep:affinidi-data-integrity", "dep:affinidi-secrets-resolver"]
posme = ["dep:posme", "authorproof-protocol/posme"]

[build-dependencies]
uniffi = { version = "0.29", features = ["build"], optional = true }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "crypto_bench"
harness = false

[[bench]]
name = "store_bench"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "keystroke_bench"
harness = false

