[package]
name = "posme"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false
description = "Proof of Sequential Memory Execution (draft-condrey-cfrg-posme)"

[dependencies]
blake3 = "1.8"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
subtle = "2.6"
sha2 = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
prover = []
